--- a/src/app/modules/pro/channel/footer/footer.component.html
+++ b/src/app/modules/pro/channel/footer/footer.component.html
@@ -1,6 +1,14 @@
 <div class="m-proChannelFooter">
   <div class="m-proChannelFooter__items">
     <a
+      *ngIf="showMessageButton()"
+      (click)="onMessageClicked()"
+      class="m-proChannelFooter__link"
+      i18n-title
+    >
+      Message
+    </a>
+    <a
       *ngFor="let link of footerLinks"
       class="m-proChannelFooter__link"
       [href]="link.href"
