The onboarding date of birth selector needs to limit underagers

--- a/src/app/modules/onboarding-v2/steps/info/info.component.html
+++ b/src/app/modules/onboarding-v2/steps/info/info.component.html
@@ -63,6 +63,13 @@
     <m-date__dropdowns
       (selectedDateChange)="selectedDateChange($event)"
     ></m-date__dropdowns>
+    <div
+      class="m-onboarding__error"
+      [style.visibility]="!!ageError ? 'visible' : 'hidden'"
+      i18n
+    >
+      You must be at least 13 years old
+    </div>
   </div>
 
   <div class="m-onboarding__actionButtons">
