Fixed broken E2E tests. #2539

--- a/src/app/modules/comments/poster/poster.component.html
+++ b/src/app/modules/comments/poster/poster.component.html
@@ -40,6 +40,7 @@
             [getChoiceLabel]="suggestions.getChoiceLabel"
             [itemTemplate]="itemTemplate"
             [triggerCharacters]="['#', '@']"
+            tabindex="0"
           ></minds-textarea>
         </m-text-input--autocomplete-container>
       </form>
