--- a/src/app/modules/pro/marketing.component.html
+++ b/src/app/modules/pro/marketing.component.html
@@ -241,7 +241,12 @@
         <div
           class="m-grid__column-12 m-grid__column-12--mobile m-marketing__body m-marketing__body--extra"
         >
-          <button class="mf-button mf-button--alt" (click)="scrollToTop()" i18n>
+          <button
+            class="mf-button mf-button--alt"
+            (click)="scrollToTop()"
+            data-cy="data-minds-pro-upgrade-button"
+            i18n
+          >
             Upgrade to Pro
           </button>
         </div>
