(feat): unmute autoplayed video when clicking (fix): add more playr methods to MindsVideoplayerComponent

--- a/src/app/modules/legacy/components/cards/activity/activity.html
+++ b/src/app/modules/legacy/components/cards/activity/activity.html
@@ -302,7 +302,10 @@
       [guid]="activity.entity_guid"
       [shouldPlayInModal]="true"
       [autoplay]="false"
+      [autoplaying]="autoplaying"
+      (click)="userPlay()"
       (mediaModalRequested)="openModal()"
+      #player
     ></m-videoPlayer>
   </div>
 
