--- a/src/app/modules/media/components/video-player/player.component.html
+++ b/src/app/modules/media/components/video-player/player.component.html
@@ -1,4 +1,9 @@
 <ng-container *ngIf="isPlayable(); else placeholder">
+  <div
+    class="m-videoPlayer__autoplayOverlay"
+    (click)="onOverlayClick($event)"
+    *ngIf="autoplaying && isMuted()"
+  ></div>
   <span class="m-videoPlayer__notice--error" *ngIf="status === 'failed'">
     There was an error transcoding this video.
   </span>
@@ -35,7 +40,8 @@
     <i
       class="material-icons minds-video-play-icon"
       (click)="onPlaceholderClick($event)"
-      >play_circle_outline</i
     >
+      play_circle_outline
+    </i>
   </div>
 </ng-template>
