--- a/src/app/modules/settings/general/general.component.html
+++ b/src/app/modules/settings/general/general.component.html
@@ -156,6 +156,29 @@
 </div>
 <!-- END: TOASTER NOTIFICATIONS -->
 
+<!-- START: AUTOPLAY VIDEOS -->
+<div
+  class="m-settings--section m-border m-settings--toaster"
+  *ngIf="session.getLoggedInUser().plus"
+>
+  <h4 i18n="@@MINDS__SETTINGS__AUTOPLAY_TITLE">Autoplay Videos in Feeds</h4>
+  <div class="mdl-card__supporting-text">
+    <input
+      type="checkbox"
+      id="flag_autoplay"
+      (click)="change()"
+      name="autoplay_videos"
+      [(ngModel)]="autoplay_videos"
+    />
+    <label for="flag_autoplay">
+      <ng-container i18n="@@MINDS__SETTINGS__AUTOPLAY_LABEL"
+        >Enable Video Autoplay</ng-container
+      >
+    </label>
+  </div>
+</div>
+<!-- END: TOASTER NOTIFICATIONS -->
+
 <!-- START: LANGUAGE  -->
 <div class="m-settings--section m-border m-settings--language">
   <h4 i18n="@@MINDS__SETTINGS__LANGUAGE_SETTINGS_TITLE">Language Settings</h4>
