Spot reverting theme change that breaks prod dark mode

--- a/src/app/modules/legacy/components/cards/cards.scss
+++ b/src/app/modules/legacy/components/cards/cards.scss
@@ -53,7 +53,7 @@ minds-card-user,
     display: flex;
     text-decoration: none;
     @include m-theme() {
-      color: themed($m-bgColor--secondary);
+      color: themed($m-white-always);
     }
 
     img {
