Revert "Merge branch 'feat/autoplay-for-plus' into 'master'"
This reverts commit b025c36454c6de99a7c96ff1230b171a4b4158ac, reversing
changes made to 0565d535f7b795b5542855c6be47cf3ce58dff1c.

--- a/src/app/modules/media/components/video-player/player.component.html
+++ b/src/app/modules/media/components/video-player/player.component.html
@@ -1,9 +1,4 @@
 <ng-container *ngIf="isPlayable(); else placeholder">
-  <div
-    class="m-videoPlayer__autoplayOverlay"
-    (click)="onOverlayClick($event)"
-    *ngIf="autoplaying && isMuted()"
-  ></div>
   <span class="m-videoPlayer__notice--error" *ngIf="status === 'failed'">
     There was an error transcoding this video.
   </span>
@@ -40,8 +35,7 @@
     <i
       class="material-icons minds-video-play-icon"
       (click)="onPlaceholderClick($event)"
+      >play_circle_outline</i
     >
-      play_circle_outline
-    </i>
   </div>
 </ng-template>
