Adds code highlighting support to new blogs using <pre><code>

--- a/src/app/modules/blogs/view/view.html
+++ b/src/app/modules/blogs/view/view.html
@@ -93,6 +93,7 @@
 
   <div style="width:100%; padding:8px; position:relative;">
     <div
+      m-code-highlight
       class="mdl-cell mdl-cell--12-col minds-blog-body"
       [innerHtml]="blog.description | safe"
       [ngClass]="{ 'm-mature-text': attachment.shouldBeBlurred(blog) }"
