--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -18,11 +18,10 @@
     >
       <nav class="m-v3Topbar__nav">
         <a
-          class="m-v3TopbarNav__item m-v3TopbarNavItem__logo"
+          class="m-v3TopbarNav__item m-v3TopbarNav__item--logo"
           routerLink="/"
           title="Home"
           i18n-title
-          *ngIf="shouldShowLogo(); else hamburgerMenu"
         >
           <img
             [src]="cdnAssetsUrl + 'assets/logos/bulb.svg'"
@@ -32,24 +31,30 @@
           />
         </a>
 
-        <ng-template #hamburgerMenu>
-          <div class="m-v3TopbarNav__item" (click)="toggleSidebarNav()">
-            <i class="material-icons">menu</i>
-          </div>
-        </ng-template>
+        <div
+          class="m-v3TopbarNav__item m-v3TopbarNav__item--hamburger"
+          (click)="toggleSidebarNav()"
+        >
+          <i class="material-icons">menu</i>
+        </div>
       </nav>
     </div>
 
-    <div class="m-pageLayout__pane--main m-pageLayout__container">
+    <div
+      class="m-pageLayout__pane--main"
+      style="display:flex; flex-direction: row;"
+    >
       <div class="m-v3Topbar__spacer" *ngIf="isMobile"></div>
       <div
-        class="m-v3Topbar__middleColumn m-pageLayout__pane--main"
+        class="m-v3Topbar__middleColumn"
         *ngIf="!isMobile && getCurrentUser()"
       >
         <ng-container *ngTemplateOutlet="searchBar"></ng-container>
       </div>
 
-      <div class="m-v3Topbar__rightColumn m-pageLayout__pane--right">
+      <div class="m-v3Topbar__spacer"></div>
+
+      <div class="m-v3Topbar__rightColumn">
         <ng-container *ngIf="!onAuthPages && !getCurrentUser()">
           <div class="m-v3TopbarContainer__loginWrapper">
             <a
