--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
@@ -1,11 +1,11 @@
-<h5 i18n *ngIf="leftSidebar && layoutMode !== 'tablet'">
+<h5 i18n *ngIf="leftSidebar" class="m-groupSidebarMarkers__header">
   Groups
 </h5>
 
 <ul class="m-groupSidebarMarkers__list m-scroll__thin" #list>
   <li style="display:flex">
     <a
-      class="m-groupSidebarMarkers__newGroup"
+      class="m-groupSidebarMarkersList__item m-groupSidebarMarkersList__item--newGroup"
       [routerLink]="['/groups/create']"
     >
       <m-tooltip [anchor]="tooltipsAnchor" [useParentPosition]="true">
@@ -16,15 +16,19 @@
           New group
         </ng-container>
       </m-tooltip>
-      <ng-container i18n="@@M__COMMON__NEW_GROUP" *ngIf="showLabels">
+      <span
+        class="m-groupSidebarMarkersListItem__label"
+        i18n="@@M__COMMON__NEW_GROUP"
+        *ngIf="showLabels"
+      >
         New group
-      </ng-container>
+      </span>
     </a>
   </li>
 
   <li *ngIf="!inProgress && groups && groups.length > 0">
     <a
-      class="m-groupSidebarMarkers__discoverGroups"
+      class="m-groupSidebarMarkersList__item  m-groupSidebarMarkersList__item--discoverGroups"
       [routerLink]="[
         '/newsfeed/global/top',
         { period: '12h', type: 'groups', all: 1 }
@@ -38,14 +42,21 @@
           Discover Groups
         </ng-container>
       </m-tooltip>
-      <ng-container i18n="@@M__COMMON__DISCOVER_GROUPS" *ngIf="showLabels">
+      <span
+        class="m-groupSidebarMarkersListItem__label"
+        i18n="@@M__COMMON__DISCOVER_GROUPS"
+        *ngIf="showLabels"
+      >
         Discover Groups
-      </ng-container>
+      </span>
     </a>
   </li>
 
   <li *ngFor="let group of groups" [class.has-marker]="group.hasMarker">
-    <a [routerLink]="['/groups/profile', group.guid]">
+    <a
+      class="m-groupSidebarMarkersList__item"
+      [routerLink]="['/groups/profile', group.guid]"
+    >
       <m-tooltip [anchor]="tooltipsAnchor" [useParentPosition]="true">
         <img
           [class.m-pulsating--small]="group.hasGathering$ | async"
@@ -58,9 +69,9 @@
           {{ group.name }}
         </ng-container>
       </m-tooltip>
-      <ng-container *ngIf="showLabels">
+      <span class="m-groupSidebarMarkersListItem__label" *ngIf="showLabels">
         {{ group.name }}
-      </ng-container>
+      </span>
     </a>
   </li>
 
@@ -80,12 +91,13 @@
           Join some groups to populate this sidebar
         </ng-container>
       </m-tooltip>
-      <ng-container
+      <span
+        class="m-groupSidebarMarkersListItem__label"
         i18n="@@M__COMMON__JOIN_SOME_GROUPS_TO_POPULATE_THIS_SIDEBAR"
         *ngIf="showLabels"
       >
         Join some groups to populate this sidebar
-      </ng-container>
+      </span>
     </a>
   </li>
 
