--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
@@ -2,13 +2,16 @@
 
 m-group--sidebar-markers {
   &.m-groupSidebarMarkers__leftSidebar {
-    h5 {
+    h5.m-groupSidebarMarkers__header {
       font-size: 11px;
       line-height: 30px;
       letter-spacing: 1.83px;
       text-transform: uppercase;
       @include m-theme() {
         color: rgba(themed($m-black), 0.3);
+      }
+      @media screen and (max-width: $layoutMax3ColWidth) {
+        display: none;
       }
     }
 
@@ -27,23 +30,23 @@ m-group--sidebar-markers {
         width: auto;
         height: auto;
         border: unset !important;
+        position: relative;
 
         a {
-          padding: 8px 0;
-          font-size: 14px;
-          font-weight: normal;
+          display: inline-flex;
+          flex-direction: row;
+          padding: 8px 16px 8px 0;
           line-height: 30px;
+          box-sizing: border-box;
+          width: 100%;
+          justify-content: center;
 
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow-x: hidden;
-
-          @include m-theme() {
-            color: themed($m-black);
+          @media screen and (max-width: $layoutMax3ColWidth) {
+            padding: 8px 0;
           }
 
-          &.m-groupSidebarMarkers__newGroup,
-          &.m-groupSidebarMarkers__discoverGroups {
+          &.m-groupSidebarMarkersList__item--newGroup,
+          &.m-groupSidebarMarkersList__item--discoverGroups {
             @include m-theme() {
               color: themed($m-grey-200);
             }
@@ -55,9 +58,28 @@ m-group--sidebar-markers {
             }
           }
 
+          .m-groupSidebarMarkersListItem__label {
+            display: inline-block;
+            flex: 1;
+            font-size: 14px;
+            font-weight: normal;
+            margin-left: 24px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow-x: hidden;
+
+            @include m-theme() {
+              color: themed($m-textColor--secondary);
+            }
+
+            @media screen and (max-width: $layoutMax3ColWidth) {
+              display: none;
+            }
+          }
+
           m-tooltip {
             vertical-align: middle;
-            margin-right: 21px;
+            // margin-right: 21px;
 
             img {
               width: 27px;
